--- a/overrides/partials/header.html
+++ b/overrides/partials/header.html
@@ -3,15 +3,12 @@
 
     <!-- LEWA sekcja: Flagi -->
     <div class="md-header__title header-left">
-      <a href="{{ base_url }}/pl/index.html" aria-label="Polski" title="Polski" class="md-header__button">🇵🇱</a>
-      <a href="{{ base_url }}/en/index.html" aria-label="English" title="English" class="md-header__button">🇬🇧</a>
+      <a href="{{ base_url }}pl/index.html" aria-label="Polski" title="Polski" class="md-header__button">🇵🇱</a>
+      <a href="{{ base_url }}en/index.html" aria-label="English" title="English" class="md-header__button">🇬🇧</a>
     </div>
 
-    <!-- ŚRODKOWA sekcja: Logo + napis -->
+    <!-- ŚRODKOWA sekcja: Napis -->
     <div class="header-center">
-      <!-- <a href="/" class="md-header__button md-logo" aria-label="Strona główna">
-        <img src="{{ base_url }}/img/logo.png" alt="Logo" class="header-logo" />
-      </a> -->
       <span class="header-title">Portfolio</span>
     </div>
 
